Fix text and code

--- a/Trabalho_2/grupo-2-trabalho-2.rmd
+++ b/Trabalho_2/grupo-2-trabalho-2.rmd
@@ -82,8 +82,8 @@ regressao
 ```
 
 
-temp variável dependente
-cnt variável independente
+temp variável independente
+cnt variável dependente
 
 ```{r, evail = TRUE}
 summary(regressao)
