--- a/Trabalho_2/parte_Andrei.rmd
+++ b/Trabalho_2/parte_Andrei.rmd
@@ -1,6 +1,6 @@
 ---
 title: "grupo2-trabalho2"
-subtitle: 'Unidade Curricular : Métodos Estatísticos'
+subtitle: 'Unidade Curricular : MÃ©todos EstatÃ­sticos'
 output:
   html_document: default
   word_document: default
@@ -22,10 +22,10 @@ hour.dataset <- "C:/Users/andre/Desktop/ME/ME_Trabalhos_2122/hour.csv"
 # Todos os alugueres todas as horas
 hour <- read.csv(file = hour.dataset)
 
-# Todos os alugueres entre as 7 às 18
+# Todos os alugueres entre as 7 Ã s 18
 hour.day <- subset(hour, 6<hr & hr<19)
 
-# Todos os alugueres entre as 19 às 6
+# Todos os alugueres entre as 19 Ã s 6
 hour.night <- subset(hour, hr>18 | hr<7)
 
 # Ver tabelas importadas no RStudio
@@ -35,33 +35,33 @@ View(hour.day)
 
 ## **2. Dados em Estudo** {#desc-dados}
 
-A nossa análise irá contemplar os alugueres de bicicletas usando os métodos matemáticos sobre regressão linear simples.
+A nossa anÃ¡lise irÃ¡ contemplar os alugueres de bicicletas usando os mÃ©todos matemÃ¡ticos sobre regressÃ£o linear simples.
 
 
 ## **2.1. hour** {#hour}
 
 ### **2.1.1 temp * cnt ** {#cnt-temp}
 
-#### **Diagrama de Dispersão** {#cnt-temp-diagrama_disp}
+#### **Diagrama de DispersÃ£o** {#cnt-temp-diagrama_disp}
 
 ```{r, evail = TRUE}
 plot(hour.day$cnt ~ hour.day$temp, main = "cnt*temp day", xlab="temp day",
      ylab="cnt", col="purple", pch=16, cex=1.1)
 ```
 
-O diagrama de dispersão do cnt com temp é de correlação linear positiva 
-porque a maior parte do valores correspondem a valores elevados da outra variável.
+O diagrama de dispersÃ£o do cnt com temp Ã© de correlaÃ§Ã£o linear positiva 
+porque a maior parte do valores correspondem a valores elevados da outra variÃ¡vel.
 
-#### **Coeficiente de Correlação Linear de Pearson** {#cnt-temp-pearson}
+#### **Coeficiente de CorrelaÃ§Ã£o Linear de Pearson** {#cnt-temp-pearson}
 
-O resultado do coeficient de correlação linear do cnt*temp usando o método de pearson:
+O resultado do coeficient de correlaÃ§Ã£o linear do cnt*temp usando o mÃ©todo de pearson:
 ```{r, evail = TRUE}
 cor.test(hour.day$cnt,hour.day$temp, method="pearson")
 ```
 
-O coeficiente de correlação linear deste problema é correlação linear positiva fraca porque está entre 0 e 0.5.
+O coeficiente de correlaÃ§Ã£o linear deste problema Ã© correlaÃ§Ã£o linear positiva fraca porque estÃ¡ entre 0 e 0.5.
 
-#### **Reta de Regressão** {#cnt-temp-reta_regressao}
+#### **Reta de RegressÃ£o** {#cnt-temp-reta_regressao}
 
 ```{r, evail = TRUE}
 plot(hour.day$temp,hour.day$cnt, main = "cnt*temp day", xlab="temp day",
@@ -69,29 +69,29 @@ plot(hour.day$temp,hour.day$cnt, main = "cnt*temp day", xlab="temp day",
 abline(lm(hour.day$cnt ~ hour.day$temp))
 ```
 
-Na reta de regressão a correlação linear positiva porque como o b é positivo a relação entre X e Y é positiva.
+Na reta de regressÃ£o a correlaÃ§Ã£o linear positiva porque como o b Ã© positivo a relaÃ§Ã£o entre X e Y Ã© positiva.
 
-Conclui se que com a observação do diagrama de dispersão e o calculo do método de pearson que o diagrama de dispersão, existe uma correlação linear positiva fraca entre as variáveis quantitativas cnt e temp .
+Conclui se que com a observaÃ§Ã£o do diagrama de dispersÃ£o e o calculo do mÃ©todo de pearson que o diagrama de dispersÃ£o, existe uma correlaÃ§Ã£o linear positiva fraca entre as variÃ¡veis quantitativas cnt e temp .
 
 -------------------------------
 
-O valor da reta de regressão linear tem uma previsão de 0.4116067
+O valor da reta de regressÃ£o linear tem uma previsÃ£o de 0.4116067
 ```{r, evail = TRUE}
 regressao <- lm(hour.day$temp ~ hour.day$cnt)
 regressao
 ```
 
 
-temp variável independente
-cnt variável dependente
+temp variÃ¡vel independente
+cnt variÃ¡vel dependente
 
 ```{r, evail = TRUE}
 summary(regressao)
 ```
 
-Método dos mínimos quadrados é significativo porque tem um valor próximo de 1.
+MÃ©todo dos mÃ­nimos quadrados Ã© significativo porque tem um valor prÃ³ximo de 1.
 
-#### **Previsões** {#cnt-temp-previsao}
+#### **PrevisÃµes** {#cnt-temp-previsao}
 
 ```{r, evail = TRUE}
 dados <- c(0.30,0.75)
@@ -99,20 +99,20 @@ previsao <- 0.4048953+0.0004228*dados
 previsao
 ```
 Perante os valores obtidos conclui-se que os valores tendem a crescer consoante o aumento do valor de x, afastando a hipotese de obter valores absurdos.
-[Diagrama de Dispersão](#cnt-temp-diagrama_disp)
+[Diagrama de DispersÃ£o](#cnt-temp-diagrama_disp)
 
-#### **Diagrama de Dispersão dos Residuos** {#cnt-temp-residuos}
+#### **Diagrama de DispersÃ£o dos Residuos** {#cnt-temp-residuos}
 
 ```{r, echo=FALSE}
 
 residuos <- resid(regressao)
 residuos
 
-plot(resid(regressao) ~ predict(regressao), main="Diagrama Dispersão dos Resíduos", xlab="previsão", ylab = "resíduos", col="purple", pch=16)
+plot(resid(regressao) ~ predict(regressao), main="Diagrama DispersÃ£o dos ResÃ­duos", xlab="previsÃ£o", ylab = "resÃ­duos", col="purple", pch=16)
 abline(0,0)
 
 ```
-Os valores observados dos resíduos encontram-se entre os valores -0.51808 e 0.51240. No entanto, os valores encontram-se mais concentrados entre os valores -0.4 e 0.5.
+Os valores observados dos resÃ­duos encontram-se entre os valores -0.51808 e 0.51240. No entanto, os valores encontram-se mais concentrados entre os valores -0.4 e 0.5.
 Assumindo que o ponto mais alto seja 0.51240 trata-se de um outlier, por se encontrar mais afastado.
 
 
