--- a/Trabalho_2/grupo-2-trabalho-2.rmd
+++ b/Trabalho_2/grupo-2-trabalho-2.rmd
@@ -75,7 +75,7 @@ Conclui se que com a observação do diagrama de dispersão e o calculo do méto
 
 -------------------------------
 
-O valor da reta de regressão linear tem uma previsão de 0.4155758
+O valor da reta de regressão linear tem um valor de 0.4155758
 ```{r, evail = TRUE}
 regressao <- lm(hour$temp ~ hour$cnt)
 regressao
@@ -154,7 +154,7 @@ Conclui se que com a observação do diagrama de dispersão e o calculo do méto
 
 -------------------------------
 
-O valor da reta de regressão linear tem uma previsão de 0.4116067
+O valor da reta de regressão linear tem um valor de 0.4116067
 ```{r, evail = TRUE}
 regressao_day <- lm(hour.day$temp ~ hour.day$cnt)
 regressao_day
@@ -232,7 +232,7 @@ Conclui se que com a observação do diagrama de dispersão e o calculo do méto
 
 -------------------------------
 
-O valor da reta de regressão linear tem uma previsão de 0.4202116
+O valor da reta de regressão linear tem um valor de 0.4202116
 ```{r, evail = TRUE}
 regressao_night <- lm(hour.night$temp ~ hour.night$cnt)
 regressao_night
